--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.spockframework</groupId>
   <artifactId>spock-example</artifactId>
@@ -11,9 +12,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
-  
+
   <build>
-<!-- Mandatory plugins for using Spock -->
+    <!-- Mandatory plugins for using Spock -->
     <plugins>
       <plugin>
         <groupId>org.codehaus.gmaven</groupId>
@@ -45,11 +46,17 @@
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>1.7.0</version>
+            <version>1.7.1</version>
+            <exclusions>
+              <exclusion>
+                <groupId>org.fusesource.jansi</groupId>
+                <artifactId>jansi</artifactId>
+              </exclusion>
+            </exclusions>
           </dependency>
         </dependencies>
       </plugin>
-<!-- Optional plugins for using Spock --> 
+      <!-- Optional plugins for using Spock -->
       <plugin>
         <!-- 
           Finds all Spock specifications in this project, and configures Maven to run them
@@ -57,7 +64,8 @@
         -->
         <groupId>org.spockframework</groupId>
         <artifactId>spock-maven</artifactId>
-        <version>${project.version}</version> <!-- you need to specify a concrete version number here -->
+        <version>${project.version}</version>
+        <!-- you need to specify a concrete version number here -->
         <executions>
           <execution>
             <goals>
@@ -66,7 +74,7 @@
           </execution>
         </executions>
       </plugin>
-<!-- Only required if default Surefire configuration is not satisfactory -->
+      <!-- Only required if default Surefire configuration is not satisfactory -->
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.4.3</version>
@@ -74,7 +82,7 @@
           <useFile>false</useFile>
         </configuration>
       </plugin>
-<!-- Only required for spock-example build -->
+      <!-- Only required for spock-example build -->
       <plugin>
         <artifactId>maven-deploy-plugin</artifactId>
         <configuration>
@@ -85,15 +93,16 @@
   </build>
 
   <dependencies>
-<!-- Mandatory dependencies for using Spock -->
+    <!-- Mandatory dependencies for using Spock -->
     <dependency>
       <groupId>org.spockframework</groupId>
       <artifactId>spock-core</artifactId>
-      <version>${project.version}</version> <!-- you need to specify a concrete version number here -->
+      <version>${project.version}</version>
+      <!-- you need to specify a concrete version number here -->
       <scope>test</scope>
-    </dependency>    
-<!-- Optional dependencies for using Spock -->
-	  <dependency> <!-- enables mocking of classes (in addition to interfaces) -->	    
+    </dependency>
+    <!-- Optional dependencies for using Spock -->
+    <dependency> <!-- enables mocking of classes (in addition to interfaces) -->
       <groupId>cglib</groupId>
       <artifactId>cglib-nodep</artifactId>
       <version>2.1_3</version>
@@ -104,8 +113,8 @@
       <artifactId>objenesis</artifactId>
       <version>1.2</version>
       <scope>test</scope>
-    </dependency>    
-<!-- Dependencies used by examples in this project (not required for using Spock) -->
+    </dependency>
+    <!-- Dependencies used by examples in this project (not required for using Spock) -->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
@@ -113,9 +122,9 @@
     </dependency>
   </dependencies>
 
-<!-- Only required if a snapshot version of Spock is used -->  
+  <!-- Only required if a snapshot version of Spock is used -->
   <repositories>
-    <repository>     
+    <repository>
       <id>spock-snapshots</id>
       <url>http://m2repo.spockframework.org/snapshots</url>
       <snapshots>
@@ -123,10 +132,10 @@
       </snapshots>
     </repository>
   </repositories>
-  
-<!-- Only required if a snapshot version of Spock's Maven plugin is used -->
+
+  <!-- Only required if a snapshot version of Spock's Maven plugin is used -->
   <pluginRepositories>
-    <pluginRepository>     
+    <pluginRepository>
       <id>spock-snapshots</id>
       <url>http://m2repo.spockframework.org/snapshots</url>
       <snapshots>
@@ -135,7 +144,7 @@
     </pluginRepository>
   </pluginRepositories>
 
-<!-- Only required for spock-example build -->  
+  <!-- Only required for spock-example build -->
   <distributionManagement>
     <repository>
       <id>foo</id>
