fixed Gradle build, excluded spock-example from Gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,26 @@
 allprojects {
   group = "org.spockframework"
   version = "0.4-groovy-1.7-SNAPSHOT"
+}
 
-  groovyArtifact = "org.codehaus.groovy:groovy-all:1.7.0"
+subprojects {
+  usePlugin("groovy")
+  
+  sourceCompatibility = 1.5
+  targetCompatibility = 1.5
+
+  compileGroovy.options.fork = false
+  compileTestGroovy.options.fork = false
+
+  dependencies {
+    groovy("org.codehaus.groovy:groovy-all:1.7.1") {
+      exclude module: "jansi"
+    }
+  }
+
+  repositories {
+    mavenCentral()
+  }
 }
 
 task wrapper(type: Wrapper) { 
