--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include 'spock-core', 'spock-specs', 'spock-example', 'spock-tapestry', 'spock-guice', 'spock-spring', 'spock-unitils'
+include 'spock-core', 'spock-specs', 'spock-tapestry', 'spock-guice', 'spock-spring', 'spock-unitils'
 
