--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -13,11 +13,11 @@ dependencies {
   testCompile "junit:junit:4.8.1"
 
   // optional dependencies for using Spock
-  testRuntime "cglib:cglib-nodep:2.1_3"     // enables mocking of classes (in addition to interfaces)
+  testRuntime "cglib:cglib-nodep:2.2"     // enables mocking of classes (in addition to interfaces)
   testRuntime "org.objenesis:objenesis:1.2" // enables mocking of classes without default constructor (together with CGLIB)
 
   // dependencies used by examples in this project (not required for using Spock)
-  testRuntime "com.h2database:h2:1.2.123"
+  testRuntime "com.h2database:h2:1.2.130"
 }
 
 // creates bootstrap files (gradlew etc.) for Gradle build (not required for using Spock)
