--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
       <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib-nodep</artifactId>
-        <version>2.1_3</version>
+        <version>2.2</version>
       </dependency>
       <dependency>
         <groupId>org.objenesis</groupId>
@@ -158,12 +158,17 @@
       <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
-        <version>1.2.123</version>
+        <version>1.2.130</version>
       </dependency>
       <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
         <version>1.7.1</version>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.14</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
