--- a/spock-spring/build.gradle
+++ b/spock-spring/build.gradle
@@ -1,14 +1,16 @@
 project(":spock-spring") {
+  def springVersion = "3.0.1.RELEASE"
+
   dependencies {
     compile project(":spock-core")
-    compile "org.springframework:spring-test:2.5.6.SEC01"
-    compile "org.springframework:spring-beans:2.5.6.SEC01"
-    testCompile "org.springframework:spring-context:2.5.6.SEC01"
+    compile "org.springframework:spring-test:$springVersion"
+    compile "org.springframework:spring-beans:$springVersion"
+    testCompile "org.springframework:spring-context:$springVersion"
     // not used directly at compile-time, but needed by groovyc
-    testCompile "org.springframework:spring-core:2.5.6.SEC01"
-    testCompile "org.springframework:spring-jdbc:2.5.6.SEC01"
-    testCompile "org.springframework:spring-tx:2.5.6.SEC01"
-    testRuntime "com.h2database:h2:1.2.123"
-    testRuntime "log4j:log4j:1.2.14"
+    testCompile "org.springframework:spring-core:$springVersion"
+    testCompile "org.springframework:spring-jdbc:$springVersion"
+    testCompile "org.springframework:spring-tx:$springVersion"
+    testRuntime h2database
+    testRuntime log4j
   }
 }
