added spec for SpecClassFileFinder

--- a/spock-specs/build.gradle
+++ b/spock-specs/build.gradle
@@ -2,6 +2,7 @@ project(":spock-specs") {
   dependencies {
     compile project(":spock-core")
     compile junit
+    testRuntime asm
     testRuntime cglib
     testRuntime objenesis
     testRuntime h2database
