--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -8,7 +8,9 @@ repositories {
 
 dependencies {
   // mandatory dependencies for using Spock
-  groovy "org.codehaus.groovy:groovy-all:1.7.1"
+  groovy("org.codehaus.groovy:groovy-all:1.7.1") {
+    exclude module: "jansi"
+  }
   testCompile "org.spockframework:spock-core:0.4-groovy-1.7-SNAPSHOT"
   testCompile "junit:junit:4.8.1"
 
