--- a/spock-spring/pom.xml
+++ b/spock-spring/pom.xml
@@ -14,7 +14,7 @@
   <url>http://spockframework.org</url>
 
   <properties>
-    <spring.version>3.0.1.RELEASE</spring.version>
+    <spring.version>2.5.6.SEC01</spring.version>
   </properties>
   
   <build>
