added module spock-grails for Grails 1.3/Groovy 1.7

--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,8 @@
         <module>spock-tapestry</module>
         <module>spock-guice</module>
         <module>spock-spring</module>
-        <module>spock-unitils</module>
+        <module>spock-unitils</module>  
+		<module>spock-grails</module>
       </modules>
     </profile>
     <profile>
