--- a/spock-grails/pom.xml
+++ b/spock-grails/pom.xml
@@ -48,19 +48,6 @@
       <artifactId>grails-test</artifactId>
       <version>${grails.version}</version>
     </dependency>
-    <!-- not sure who depends on grails-bootstrap, but we need to exclude grails-bootstrap->gpars->netty,
-    which should be but isn't optional in GPars 0.9 POM (fixed in 0.10) -->
-    <dependency>
-      <groupId>org.grails</groupId>
-      <artifactId>grails-bootstrap</artifactId>
-      <version>${grails.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.jboss.netty</groupId>
-          <artifactId>netty</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
 
     <dependency>
       <groupId>net.sourceforge.htmlunit</groupId>
@@ -178,6 +165,17 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
             <version>1.6.6</version>
+          </dependency>
+          <dependency>
+            <groupId>org.grails</groupId>
+            <artifactId>grails-bootstrap</artifactId>
+            <version>1.2.2</version>
+            <exclusions>
+              <exclusion> <!-- exclude netty, which is mistakenly non-optional in GPars 0.9 POM (fixed in 0.10) -->
+                <groupId>org.jboss.netty</groupId>
+                <artifactId>netty</artifactId>
+              </exclusion>
+            </exclusions>
           </dependency>
         </dependencies>
         <executions>
