upgraded spock-grails build to Grails 1.3.0

--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,7 +1,6 @@
 #Grails Metadata file
-#Tue Oct 27 00:26:23 GMT+00:00 2009
-
-app.grails.version=1.3.0.RC2
+#Wed May 12 00:50:30 GMT+00:00 2010
+app.grails.version=1.3.0
 app.name=spock-grails
 app.version=0.4-groovy-1.7-SNAPSHOT
 plugins.hibernate=1.2.0
