--- a/spock-grails/pom.xml
+++ b/spock-grails/pom.xml
@@ -48,12 +48,27 @@
           <groupId>org.hibernate</groupId>
           <artifactId>hibernate-commons-annotations</artifactId> 
         </exclusion>
+        <exclusion> <!-- grails-gorm POM requires version 3.4.0.ga of this dependency but it's 3.4.0.GA -->
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-annotations</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-commons-annotations</artifactId>
       <version>3.1.0.GA</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-annotations</artifactId>
+      <version>3.4.0.GA</version>
+      <exclusions>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
