--- a/spock-tapestry/pom.xml
+++ b/spock-tapestry/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.spockframework</groupId>
     <artifactId>spock-parent</artifactId>
-    <version>0.4-groovy-1.6-SNAPSHOT</version>
+    <version>0.4-groovy-1.6</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
