--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -11,7 +11,7 @@ dependencies {
   groovy("org.codehaus.groovy:groovy-all:1.7.2") {
     exclude module: "jansi"
   }
-  testCompile "org.spockframework:spock-core:0.4-groovy-1.7-SNAPSHOT"
+  testCompile "org.spockframework:spock-core:0.4-groovy-1.7"
   testCompile "junit:junit:4.8.1"
 
   // optional dependencies for using Spock
