--- a/spock-example/pom.xml
+++ b/spock-example/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.spockframework</groupId>
   <artifactId>spock-example</artifactId>
-  <version>0.4-groovy-1.7-SNAPSHOT</version>
+  <version>0.4-groovy-1.7</version>
   <packaging>jar</packaging>
   <name>Spock Framework - Example Project</name>
 
