fixed spock-example ant build upped version number to 0.5-groovy-1.6-SNAPSHOT

--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -2,6 +2,6 @@
 #Tue Oct 27 00:26:23 GMT+00:00 2009
 app.grails.version=1.2.2
 app.name=spock-grails
-app.version=0.4-groovy-1.6
+app.version=0.5-groovy-1.6-SNAPSHOT
 plugins.hibernate=1.2.0
 plugins.tomcat=1.2.2
