--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -9,7 +9,7 @@ repositories {
 dependencies {
   // mandatory dependencies for using Spock
   groovy "org.codehaus.groovy:groovy-all:1.6.8"
-  testCompile "org.spockframework:spock-core:0.4-groovy-1.6"
+  testCompile "org.spockframework:spock-core:0.5-groovy-1.6-SNAPSHOT"
   testCompile "junit:junit:4.8.1"
 
   // optional dependencies for using Spock
