--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 allprojects {
   group = "org.spockframework"
-  version = "0.5-groovy-1.7-SNAPSHOT"
+  version = "0.5-groovy-1.8-SNAPSHOT"
 
   antDep = "org.apache.ant:ant:1.7.1"
   asm = "asm:asm:3.2"
@@ -27,13 +27,12 @@ subprojects {
   compileTestGroovy.options.fork = false
 
   dependencies {
-    groovy("org.codehaus.groovy:groovy-all:1.7.2") {
-      exclude module: "jansi"
-    }
+    groovy("org.codehaus.groovy:groovy-all:1.8.0-beta-1-SNAPSHOT")
   }
 
   repositories {
-    mavenCentral()
+    mavenCentral() 
+    mavenRepo urls: "http://snapshots.repository.codehaus.org"
   }
 }
 
