--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -3,14 +3,14 @@ usePlugin("groovy")
 repositories {
   mavenCentral()
   // only required if a snapshot version of Spock is used
-  mavenRepo urls: "http://m2repo.spockframework.org/snapshots"
+  mavenRepo urls: "http://m2repo.spockframework.org/snapshots" 
+  // only required if a snapshot version of Groovy is used
+  mavenRepo urls: "http://snapshots.repository.codehaus.org"
 }
 
 dependencies {
   // mandatory dependencies for using Spock
-  groovy("org.codehaus.groovy:groovy-all:1.7.2") {
-    exclude module: "jansi"
-  }
+  groovy "org.codehaus.groovy:groovy-all:1.8.0-beta-1-SNAPSHOT"
   testCompile "org.spockframework:spock-core:0.5-groovy-1.8-SNAPSHOT"
   testCompile "junit:junit:4.8.1"
 
