--- a/spock-specs/pom.xml
+++ b/spock-specs/pom.xml
@@ -91,5 +91,12 @@
       <version>1.8.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <version>2.3</version>
+      <classifier>jdk15</classifier>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
