--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,8 @@
               </goals>
               <configuration>
                 <source>
+                  // the purpose of this script is to make sure that
+                  // maven-source-plugin includes Groovy sources in source Jar
                   project.addCompileSourceRoot("src/main/groovy")
                 </source>
               </configuration>
