--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <grails.version>1.2.3</grails.version>
   </properties>
 
   <build>
@@ -211,6 +212,7 @@
         <module>spock-guice</module>
         <module>spock-spring</module>
         <module>spock-unitils</module>
+        <module>spock-grails-support</module>
         <module>spock-grails</module>
       </modules>
     </profile>
@@ -225,6 +227,7 @@
         <module>spock-guice</module>
         <module>spock-spring</module>
         <module>spock-unitils</module>
+        <module>spock-grails-support</module>
       </modules>
       <properties>
         <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
@@ -246,6 +249,7 @@
         <module>spock-guice</module>
         <module>spock-spring</module>
         <module>spock-unitils</module>
+        <module>spock-grails-support</module>
       </modules>
       <build>
         <plugins>
