--- a/spock-grails-support/pom.xml
+++ b/spock-grails-support/pom.xml
@@ -9,15 +9,24 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.spockframework</groupId>
-  <artifactId>spock-grails</artifactId>
-  <packaging>pom</packaging>
-  <name>Spock Framework - Grails Plugin</name>
+  <artifactId>spock-grails-support</artifactId>
+  <packaging>jar</packaging>
+  <name>Spock Framework - Grails Plugin (support classes)</name>
   <url>http://grails.org/plugin/spock</url>
-
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.gmaven</groupId>
+        <artifactId>gmaven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+  
   <dependencies>
     <dependency>
       <groupId>org.spockframework</groupId>
-      <artifactId>spock-grails-support</artifactId>
+      <artifactId>spock-core</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -45,7 +54,32 @@
       <artifactId>grails-test</artifactId>
       <version>${grails.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.grails</groupId>
+      <artifactId>grails-webflow</artifactId>
+      <version>${grails.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>com.springsource.org.apache.commons.logging</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.aopalliance</groupId>
+          <artifactId>com.springsource.org.aopalliance</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework.webflow</groupId>
+          <artifactId>org.springframework.webflow</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.webflow</groupId>
+      <artifactId>spring-webflow</artifactId>
+      <version>2.1.1.RELEASE</version>
+    </dependency>
+    
     <dependency>
       <groupId>javassist</groupId>
       <artifactId>javassist</artifactId>
@@ -96,6 +130,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>6.0.29</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.tmatesoft.svnkit</groupId>
       <artifactId>svnkit</artifactId>
       <version>1.3.1</version>
@@ -104,11 +144,6 @@
   </dependencies>
 
   <repositories>
-    <!-- Required to get hold of JTA -->
-    <repository>
-      <id>dev.java.net</id>
-      <url>http://download.java.net/maven/2/</url>
-    </repository>
     <repository>
       <id>codehaus</id>
       <url>http://repository.codehaus.org</url>
@@ -126,76 +161,4 @@
     </pluginRepository>
   </pluginRepositories>
 
-  <build>
-    <sourceDirectory>src/groovy</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-    <plugins>
-      <plugin>
-        <groupId>org.grails</groupId>
-        <artifactId>grails-maven-plugin</artifactId>
-        <version>1.2.2</version>
-        <extensions>true</extensions>   
-        <dependencies>
-        <dependency> <!-- missing dependency -->
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjrt</artifactId>
-        <version>1.6.6</version>
-      </dependency>
-    </dependencies>
-        <executions>
-          <execution>
-            <id>build</id>
-            <goals>
-              <goal>init</goal>
-              <goal>maven-clean</goal>
-              <goal>validate</goal>
-              <goal>config-directories</goal>
-              <goal>maven-compile</goal>
-              <goal>maven-test</goal>
-              <goal>maven-functional-test</goal>
-            </goals>
-            <configuration>
-              <nonInteractive>true</nonInteractive>
-            </configuration>
-          </execution>
-          <execution>
-            <id>package-plugin</id>
-            <phase>package</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <configuration>
-              <command>package-plugin</command>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <profiles>
-    <profile>
-      <id>tools</id>
-      <activation>
-        <property>
-          <name>java.vendor</name>
-          <value>Sun Microsystems Inc.</value>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun</groupId>
-          <artifactId>tools</artifactId>
-          <version>${java.version}</version>
-          <scope>system</scope>
-          <systemPath>${java.home}/../lib/tools.jar</systemPath>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
 </project>
