--- a/spock-grails-support/pom.xml
+++ b/spock-grails-support/pom.xml
@@ -32,32 +32,38 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant-junit</artifactId>
       <version>1.7.1</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.grails</groupId>
       <artifactId>grails-crud</artifactId>
       <version>${grails.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
       <artifactId>grails-gorm</artifactId>
       <version>${grails.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
       <artifactId>grails-test</artifactId>
       <version>${grails.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.grails</groupId>
       <artifactId>grails-webflow</artifactId>
       <version>${grails.version}</version>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.apache.commons</groupId>
@@ -78,12 +84,14 @@
       <groupId>org.springframework.webflow</groupId>
       <artifactId>spring-webflow</artifactId>
       <version>2.1.1.RELEASE</version>
+      <scope>provided</scope>
     </dependency>
     
     <dependency>
       <groupId>javassist</groupId>
       <artifactId>javassist</artifactId>
       <version>3.4.GA</version>
+      <scope>provided</scope>
       <optional>true</optional>
     </dependency>
 
@@ -92,6 +100,7 @@
       <groupId>opensymphony</groupId>
       <artifactId>oscache</artifactId>
       <version>2.4</version>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -108,38 +117,33 @@
       </exclusions>
     </dependency>
 
-    <!-- For ease of development and testing, we include the HSQLDB database. -->
-    <dependency>
-      <groupId>hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>1.8.0.5</version>
-    </dependency>
-
     <!-- Use Log4J for logging. This artifact also pulls in the Log4J JAR. -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.5.5</version>
-      <scope>runtime</scope>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>servlet-api</artifactId>
       <version>6.0.29</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.tmatesoft.svnkit</groupId>
       <artifactId>svnkit</artifactId>
       <version>1.3.1</version>
-      <scope>runtime</scope>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
